# novaura.life-official

./: .gitignore  AI_INTEGRATION_GUIDE.md  LOA.html  MASTER_AUDIT_TODO.md  PARTNER_ONBOARDING.md  SECURITY_AUDIT.md  novaura_complete_overview_master.json  package-lock.json  package.json
Kimi_Agent_Deployment_v11/: index.html
Kimi_Agent_Deployment_v11/assets/: index-BAto_WLc.css  index-DdjmC9AE.js
Kimi_Agent_Deployment_v14/: index.html
Kimi_Agent_Deployment_v14/assets/: index-Dp65gHg8.js  index-VkjKa0q_.css
Kimi_Agent_Deployment_v4/: index.html
Kimi_Agent_Deployment_v4/assets/: index-C3NnskmG.js  index-W9gWRqN-.css
NovAura-Coding-Partner/: package.json
NovAura-Coding-Partner/src/: extension.js
NovAura-WebOS/: .firebaserc  .gitignore  MASTER_KEY_1.md  WEBOS_PLATFORM_AUDIT.md  YOUCOM_API_REFERENCE.md  audit_route_check.py  build-combined.ps1  firebase.json  firestore.indexes.json  firestore.rules  index.html  matrix-preview.html  os.html  package-lock.json  package.json  storage.rules  themes-preview.html  vite.config.js  vite.landing.config.js
NovAura-WebOS/functions/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  package-lock.json  package.json
NovAura-WebOS/functions/src/: index.ts  nova.ts  server.ts
NovAura-WebOS/public/: privacy-policy.html  terms-of-service.html
NovAura-WebOS/public/games/: nova-net-battler.html  nova-strike.html
NovAura-WebOS/scripts/: auto-synth-poc.js
NovAura-WebOS/src/: App.jsx  index.css  landing-main.jsx  main.jsx
NovAura-WebOS/src/components/: AvatarButton.jsx  ChatBar.jsx  CommandPalette.jsx  ErrorBoundary.jsx  LayoutToggle.jsx  ManualPaymentModal.jsx  MobileLayout.jsx  OnboardingWizard.jsx  PricingPage.jsx  Sidebar.jsx  Toolbar.jsx  WindowManager.jsx
NovAura-WebOS/src/config/: firebase.js  paymentConfig.js  plans.js  syncConfig.js  tierConfig.js
NovAura-WebOS/src/contexts/: GraphicsContext.jsx
NovAura-WebOS/src/hooks/: useAuth.jsx  useLayoutMode.js  useNova.js  useSystemTelemetry.js
NovAura-WebOS/src/kernel/: KernelContext.js  KernelProvider.jsx  NovaKernel.js  SemanticsEngine.js  index.js  useKernel.js  useSemanticRegistration.js
NovAura-WebOS/src/pages/: AboutPage.jsx  AuthPage.jsx  LandingPage.jsx  SetupPage.jsx
NovAura-WebOS/src/services/: aiService.js  apiCodex.js  assetService.js  backendIntegrationService.js  creditService.js  cybeniLibraryService.js  firebaseAIService.js  marketService.js  mediaService.js  messagingService.js  messagingService_utf8.js  platformStatsService.js  researchService.js  skimmerService.js  stripeService.js  studioService.js
NovAura-WebOS/src/utils/: AIOrchestrator.js  GeminiLiveClient.js  SystemSoul.js
Novaura games pack 2/: index.html
Novaura games pack 2/assets/: index-Cl3kD7Ev.js  index-DixQ-BFR.css
Novaura-Desktop/: build_sidecar.ps1
Novaura-Desktop/AuraCore_Reference/: Aura3DVisionPipeline.cs  AuraAdvancedMode.cs  AuraAuthenticationHub.cs  AuraAvatarSystem.cs  AuraBrowserBridge.cs  AuraBrowserConfig.cs  AuraCatalystAuth.cs  AuraCloudImageGen.cs  AuraCloudStorage.cs  AuraClusterManager.cs  AuraCodeLibraryManager.cs  AuraCognitivePipeline.cs  AuraCollaborationHub.cs  AuraContextManager.cs  AuraCreativeTools.cs  AuraDarkWebBrowser.cs  AuraDemoShowcase.cs  AuraDirectGPUCapture.cs  AuraDirective.cs  AuraDynamicLearning.cs  AuraExecutionPipeline.cs  AuraFederatedLearning.cs  AuraFileSync.cs  AuraGroupManager.cs  AuraHeartbeat.cs  AuraInputController.cs  AuraLibraryAccess.cs  AuraLicensing.cs  AuraLivingAvatar.cs  AuraLocalImageGen.cs  AuraLocalVideoGen.cs  AuraMasterInit.cs  AuraMedicalAI.cs  AuraMemoryAccess.cs  AuraMemorySystem.cs  AuraMessaging.cs  AuraMetaOS.cs  AuraMind.cs  AuraModelConsciousness.cs  AuraMultimodalInterface.cs  (+50 more)
Novaura-Desktop/aura_NovaFiles/: .env.example  .gitignore  01_Aura_Nova.py  02_Aura_Nova.py  03_Aura_Nova.py  04_Aura_Nova.py  05_Aura_Nova.py  06_Aura_Nova.py  07_Aura_Nova.py  08_Aura_Nova.py  09_Aura_Nova.py  10_Aura_Nova.py  11_Aura_Nova.py  12_Aura_Nova.py  13_Aura_Nova.py  14_Aura_Nova.py  15_Aura_Nova.py  16_Aura_Nova.py  17_Aura_Nova.py  18_Aura_Nova.py  19_Aura_Nova.py  20_Aura_Nova.py  22_Aura_Nova.py  23_Aura_Nova.py  24_Aura_Nova.py  25_Aura_Nova.py  26_Aura_Nova.py  27_Aura_Nova.py  28_Aura_Nova.py  29_Aura_Nova.py  30_Aura_Nova.py  31_Aura_Nova.py  API_SETUP_GUIDE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_OVERVIEW.md  AURA_KERNEL_ARCHITECTURE.md  AUTONOMOUS_QUICK_REFERENCE.md  AUTONOMOUS_SYSTEMS_SUMMARY.md  Aura C++ Coding.txt  Aura C++ coding base.txt  (+49 more)
Novaura-Desktop/aura_NovaFiles/AuraKernel_CPP/: BUILD_GUIDE.md  CMakeLists.txt  CROSS_PLATFORM_GUIDE.md  FINAL_STATUS.md  OS_INTEGRATION_ROADMAP.md  PROJECT_STATUS.md  README.md  SAFETY_REVIEW.md  SAFE_COMPILE_GUIDE.md  SESSION_SUMMARY.md  UI_GUIDE.md  main.cpp
Novaura-Desktop/aura_NovaFiles/AuraKernel_CPP/Autonomy/: Heartbeat.cpp  Heartbeat.h  PhoenixProtocol.cpp  PhoenixProtocol.h
Novaura-Desktop/aura_NovaFiles/AuraKernel_CPP/Cognition/: ClaudeClient.cpp  ClaudeClient.h  LocalBrain.cpp  LocalBrain.h  MultiBrainRouter.cpp  MultiBrainRouter.h
Novaura-Desktop/aura_NovaFiles/AuraKernel_CPP/Core/: APIConfig.h  AuraTypes.h  CoreSanctuary.cpp  CoreSanctuary.h  EngramMemory.cpp  EngramMemory.h
Novaura-Desktop/aura_NovaFiles/AuraKernel_CPP/IO/: AuraInterface.cpp  AuraInterface.h
Novaura-Desktop/aura_NovaFiles/AuraKernel_CPP/Platform/: PlatformAbstraction.h
Novaura-Desktop/aura_sidecar/: inference_core.py  ipc.py  memory_core.py  sidecar.py
Novaura-Desktop/src-tauri/: tauri.conf.json
Novaura-Desktop/src-tauri/src/: aura_hub.rs  aura_sidecar.rs  main.rs
Novaura-Extension/: package.json
Novaura-Extension/src/: extension.ts
Novaura-Ops/: .env.example  .gitignore  ROADMAP.md  index.html  package.json  tailwind.config.js  vite.config.ts
Novaura-Ops/memory/: openrouter_manager.md
Novaura-Ops/src/: App.tsx  index.css
Novaura-Ops/src-tauri/: Cargo.toml  tauri.conf.json
Novaura-Ops/src-tauri/src/: ai_bridge.rs  commands.rs  database.rs  main.rs  openrouter_admin.rs  system.rs  terminal.rs
Novaura-Ops/src/services/: aiService.ts  firebase.ts  (+9 more)
(+113 files in other folders)
